# mac-qt-kvasercan-plugin

./: .gitmodules  CMakeLists.txt  README.md  kvasercanbackend.cpp  kvasercanbackend.h  kvasercanbackend_p.h  main.cpp  plugin.json
